--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
 
 app.db.init.enabled=true
+
+spring.security.user.name=UserB
+spring.security.user.password=password
