--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/moviedb
 spring.datasource.username=saekenz
 spring.datasource.password=password
 
-spring.jpa.hibernate.ddl-auto=create-drop
-
-app.db.init.enabled=true
+spring.jpa.hibernate.ddl-auto=create
 
 spring.security.user.name=UserB
 spring.security.user.password=password
