more reviews api impl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/moviedb
 spring.datasource.username=saekenz
 spring.datasource.password=password
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.security.user.name=UserB
 spring.security.user.password=password
