changes to config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,18 @@ spring.application.name=Cinerator
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=5
 
+# Database connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/moviedb
 spring.datasource.username=saekenz
 spring.datasource.password=password
 
+# JPA configuration
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.security.user.name=UserB
 spring.security.user.password=password
+
+# Prefix and suffix for JSP views
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
