--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.security.user.password=password
 # Prefix and suffix for JSP views
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+spring.mvc.format.date=yyyy-MM-dd
