--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 spring.mvc.format.date=yyyy-MM-dd
+
+spring.data.web.pageable.default-page-size=10
