started adding validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.mvc.view.suffix=.jsp
 spring.mvc.format.date=yyyy-MM-dd
 
 spring.data.web.pageable.default-page-size=10
+
+# Used to show errors when using @Valid (does not work with current Spring version)
+server.error.include-binding-errors=always
+server.error.include-message=always
